--- a/index.html
+++ b/index.html
@@ -270,63 +270,63 @@
                 </footer>
             </div>
         </div>
-
-        <!-- Floating Action Button (Cart) -->
-        <div id="cart-fab" class="cart-fab hidden">
-            <div class="cart-info">
-                <span class="item-count">0 Items</span>
-                <span class="cart-total">$0.00</span>
-            </div>
-            <button id="view-cart-btn">View Cart</button>
-        </div>
+        <button type="submit" id="admin-login-submit-btn" class="btn-primary full-width">Login</button>
+        </form>
+    </div>
     </div>
 
-    <!-- Supabase SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Item Modal (Add/Edit) -->
+    <div id="item-modal" class="modal hidden">
+        <div class="modal-content">
+            <header class="modal-header">
+                <h2 id="item-modal-title">Edit Item</h2>
+                <button id="close-item-modal" class="icon-btn">
+                    <span class="material-icons-round">close</span>
+                </button>
+            </header>
+            <form id="item-form">
+                <input type="hidden" id="item-id">
 
-    <form id="item-form">
-        <input type="hidden" id="item-id">
+                <div class="input-group">
+                    <span class="material-icons-round">label</span>
+                    <input type="text" id="item-name" placeholder="Item Name" required>
+                </div>
 
-        <div class="input-group">
-            <span class="material-icons-round">label</span>
-            <input type="text" id="item-name" placeholder="Item Name" required>
+                <div class="input-group">
+                    <span class="material-icons-round">category</span>
+                    <select id="item-category" required
+                        style="width:100%; background:none; border:none; color:white; outline:none; font-family:inherit;">
+                        <!-- Options injected by JS -->
+                    </select>
+                </div>
+
+                <div class="input-group">
+                    <span class="material-icons-round">image</span>
+                    <input type="text" id="item-image" placeholder="Image URL (e.g. burger.jpg)" required>
+                </div>
+
+                <div class="input-group">
+                    <span class="material-icons-round">description</span>
+                    <textarea id="item-desc" placeholder="Description" rows="3"
+                        style="width:100%; background:none; border:none; color:white; outline:none; font-family:inherit; resize:none;"></textarea>
+                </div>
+
+                <div class="input-group">
+                    <span class="material-icons-round">warning</span>
+                    <input type="text" id="item-allergens" placeholder="Allergens (comma separated)">
+                </div>
+
+                <div class="input-group">
+                    <span class="material-icons-round">attach_money</span>
+                    <input type="number" id="item-price" placeholder="Price" step="0.01" required>
+                </div>
+
+                <button type="submit" class="btn-primary full-width">Save Item</button>
+                <button type="button" id="delete-item-btn" class="btn-secondary full-width hidden"
+                    style="margin-top:10px; background:rgba(255,0,0,0.2); color:#ff6b6b;">Delete
+                    Item</button>
+            </form>
         </div>
-
-        <div class="input-group">
-            <span class="material-icons-round">category</span>
-            <select id="item-category" required
-                style="width:100%; background:none; border:none; color:white; outline:none; font-family:inherit;">
-                <!-- Options injected by JS -->
-            </select>
-        </div>
-
-        <div class="input-group">
-            <span class="material-icons-round">image</span>
-            <input type="text" id="item-image" placeholder="Image URL (e.g. burger.jpg)" required>
-        </div>
-
-        <div class="input-group">
-            <span class="material-icons-round">description</span>
-            <textarea id="item-desc" placeholder="Description" rows="3"
-                style="width:100%; background:none; border:none; color:white; outline:none; font-family:inherit; resize:none;"></textarea>
-        </div>
-
-        <div class="input-group">
-            <span class="material-icons-round">warning</span>
-            <input type="text" id="item-allergens" placeholder="Allergens (comma separated)">
-        </div>
-
-        <div class="input-group">
-            <span class="material-icons-round">attach_money</span>
-            <input type="number" id="item-price" placeholder="Price" step="0.01" required>
-        </div>
-
-        <button type="submit" class="btn-primary full-width">Save Item</button>
-        <button type="button" id="delete-item-btn" class="btn-secondary full-width hidden"
-            style="margin-top:10px; background:rgba(255,0,0,0.2); color:#ff6b6b;">Delete
-            Item</button>
-    </form>
-    </div>
     </div>
 
     <!-- Main View (Menu) -->
