--- a/admin-portal/index.html
+++ b/admin-portal/index.html
@@ -612,9 +612,13 @@
         async function loadMenu() {
             try {
                 // Point to the MAIN customer site API
-                const response = await fetch('https://gourmet-bites.vercel.app/api/menu');
+                const response = await fetch('https://gourmet-bites.vercel.app/api/menu?t=' + new Date().getTime());
                 if (response.ok) {
-                    menuItems = await response.json();
+                    const data = await response.json();
+                    menuItems = data.map(item => ({
+                        ...item,
+                        price: parseFloat(item.price) || 0
+                    }));
                 } else {
                     console.error('Failed to load menu:', response.status);
                     // Silent fallback
