--- a/admin-portal/waiter.html
+++ b/admin-portal/waiter.html
@@ -159,9 +159,9 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html" class="btn-back">
+        <a href="login.html" class="btn-back" onclick="localStorage.clear()">
             <span class="material-icons-round">arrow_back</span>
-            Back
+            Logout
         </a>
         <h1>🍽️ Waiter Station</h1>
         <div style="width: 100px;"></div>
