Force cache clear v3

--- a/admin-portal/index.html
+++ b/admin-portal/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- REBUILT 2025-12-07 15:00 UTC - Fresh staff authentication portal -->
+<!-- REBUILT 2025-12-07 15:30 UTC - Cache bypass v3 -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
