Fix index.html for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
 ﻿<!DOCTYPE html>
-<html><head><meta http-equiv="refresh" content="0; url=login.html"></head></html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=/login.html">
+    <title>Gourmet Bites - Redirecting...</title>
+</head>
+
+<body>
+    <p>Redirecting to login...</p>
+</body>
+
+</html>
