--- a/login.html
+++ b/login.html
@@ -248,6 +248,8 @@
                 });
         }
 
+        let sentVerificationCode = '';
+
         function sendSMS() {
             const countryCode = document.getElementById('countryCode').value;
             const phoneNumber = document.getElementById('phoneNumber').value;
@@ -266,6 +268,7 @@
                 .then(res => res.json())
                 .then(data => {
                     if (data.success) {
+                        sentVerificationCode = data.verificationCode; // Store code client-side
                         document.getElementById('phoneSection').style.display = 'none';
                         document.getElementById('verifySection').style.display = 'block';
                         showToast('✓ Code sent to ' + fullPhone, 'success');
@@ -289,31 +292,18 @@
                 return;
             }
 
-            fetch('https://gourmet-bites.vercel.app/api/verify-sms', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({
-                    phoneNumber: fullPhone,
-                    code: code
-                })
-            })
-                .then(res => res.json())
-                .then(data => {
-                    if (data.success) {
-                        localStorage.setItem('user', JSON.stringify({
-                            name: 'User',
-                            phone: fullPhone,
-                            verified: true
-                        }));
-                        showToast('✓ Phone verified successfully!', 'success');
-                        setTimeout(() => window.location.href = 'menu.html', 1000);
-                    } else {
-                        showToast('Invalid code. Please try again.', 'error');
-                    }
-                })
-                .catch(error => {
-                    showToast('Verification error', 'error');
-                });
+            // Verify code client-side
+            if (code === sentVerificationCode) {
+                localStorage.setItem('user', JSON.stringify({
+                    name: 'User',
+                    phone: fullPhone,
+                    verified: true
+                }));
+                showToast('✓ Phone verified successfully!', 'success');
+                setTimeout(() => window.location.href = 'menu.html', 1000);
+            } else {
+                showToast('Invalid code. Please try again.', 'error');
+            }
         }
 
         function backToPhone() {
