--- a/menu.html
+++ b/menu.html
@@ -36,8 +36,8 @@
                 <span>Menu</span>
             </button>
             <button class="nav-btn" onclick="showView('cart')">
-                <span></span>
-                <span>Cart (<span id="cartCount">0</span>)</span>
+                <span>🛒</span>
+                <span>Cart</span>
             </button>
         </div>
     </div>
@@ -54,10 +54,12 @@
                 profilePic.src = user.photoURL;
                 userName.textContent = user.name || 'User';
             } else {
-                // Phone login - use default avatar with phone number
-                const displayName = user.phone || user.name || 'User';
-                profilePic.src = 'https://ui-avatars.com/api/?name=' + encodeURIComponent(displayName) + '&background=ff6600&color=fff&size=128';
-                userName.textContent = user.phone || user.name || 'User';
+                // Phone login - use phone number for both avatar and display
+                const phoneNum = user.phone || 'User';
+                // Use just the last 4 digits for avatar to avoid "+6" showing
+                const avatarName = phoneNum.replace(/\+/g, '').slice(-4);
+                profilePic.src = 'https://ui-avatars.com/api/?name=' + avatarName + '&background=ff6600&color=fff&size=128';
+                userName.textContent = phoneNum;
             }
         }
     </script>
