--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
         .btn-google {
             width: 100%;
             padding: 16px;
-            background: #4285f4;
+            background: linear-gradient(135deg, #ff6600 0%, #ff8533 100%);
             color: white;
             border: none;
             border-radius: 12px;
@@ -49,10 +49,14 @@
             font-weight: 600;
             cursor: pointer;
             margin-bottom: 20px;
+            box-shadow: 0 4px 15px rgba(255, 102, 0, 0.3);
+            transition: all 0.3s;
         }
 
         .btn-google:hover {
-            background: #357ae8;
+            background: linear-gradient(135deg, #ff7700 0%, #ff9944 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 102, 0, 0.4);
         }
 
         .divider {
@@ -99,17 +103,21 @@
         .btn-sms {
             width: 100%;
             padding: 16px;
-            background: #10b981;
+            background: linear-gradient(135deg, #ff6600 0%, #ff8533 100%);
             color: white;
             border: none;
             border-radius: 12px;
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
+            box-shadow: 0 4px 15px rgba(255, 102, 0, 0.3);
+            transition: all 0.3s;
         }
 
         .btn-sms:hover {
-            background: #059669;
+            background: linear-gradient(135deg, #ff7700 0%, #ff9944 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 102, 0, 0.4);
         }
 
         .verify-section {
