Add Gourmet Bites branding, fix menu icon, cart badge updates, and modal auto-close

--- a/login.html
+++ b/login.html
@@ -186,7 +186,9 @@
 
 <body>
     <div class="login-box">
-        <h1>Login</h1>
+        <h1>🍴 Gourmet Bites</h1>
+        <p style="text-align: center; color: #999; margin-bottom: 30px; font-size: 14px;">Sign in to order delicious
+            food</p>
         <button class="btn-google" onclick="googleLogin()">CONTINUE WITH GOOGLE</button>
         <div class="divider">OR</div>
 
