--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
 
         <div class="bottom-nav">
             <button class="nav-btn active" onclick="showView('menu')">
-                <span></span>
+                <span>🍽️</span>
                 <span>Menu</span>
             </button>
             <button class="nav-btn" onclick="showView('cart')">
