--- a/menu.html
+++ b/menu.html
@@ -46,13 +46,19 @@
         </div>
     </div>
 
-    <script type="module">
-        // Import and call loadMenu
-        import './app.js';
+    <!-- Supabase CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-        // Load menu on page load
+    <!-- Supabase inline config -->
+    <script src="supabase-inline.js"></script>
+
+    <!-- App logic -->
+    <script src="app.js"></script>
+
+    <script>
+        // Load menu when page loads
         window.addEventListener('DOMContentLoaded', () => {
-            if (typeof loadMenu !== 'undefined') {
+            if (typeof loadMenu === 'function') {
                 loadMenu();
             }
         });
